--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "jest": "^27.5.0",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "scd30-node": "^1.0.3"
   }
 }
