--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Air quality monitor using SCD30 CO2 sensor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
