--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/programmer24601/air-quality-monitor#readme",
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@types/node-fetch": "^2.5.12",
     "jest": "^27.5.0",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
+    "node-fetch": "^2.6.7",
     "scd30-node": "^1.0.3"
   }
 }
