write to influxdb

--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,10 @@ MET_OFFICE_DATAPOINT_API_KEY=aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
 LOCAL_LATITUDE=56.800
 LOCAL_LONGITUDE=-2.200
 LOCAL_ELEVATION=100
+INFLUXDB_BASE_URL=http://localhost:8086
+INFLUXDB_API_KEY=ffffffff-gggg-hhhh-iiii-jjjjjjjjjjjj
+INFLUXDB_ORG_NAME=my_organisation
+INFLUXDB_BUCKET_NAME=data
+INFLUXDB_MEASUREMENT_NAME=measurement
+INFLUXDB_MEASUREMENT_TAG_KEY=location
+INFLUXDB_MEASUREMENT_TAG_VALUE=office
