--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
 MET_OFFICE_DATAPOINT_API_KEY=aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+MET_OFFICE_OBSERVATION_SITE=3772
 LOCAL_LATITUDE=56.800
 LOCAL_LONGITUDE=-2.200
 LOCAL_ELEVATION=100
