add ability to perform forced recalibration

--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,5 @@ INFLUXDB_BUCKET_NAME=data
 INFLUXDB_MEASUREMENT_NAME=measurement
 INFLUXDB_MEASUREMENT_TAG_KEY=location
 INFLUXDB_MEASUREMENT_TAG_VALUE=office
+LOCAL_PRESSURE=integer in hPa for recalibration only
+OUTDOOR_CO2_CONCENTRATION=418
