--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/programmer24601/air-quality-monitor#readme",
   "dependencies": {
+    "async-bmp280": "^1.1.1",
+    "async-i2c-bus": "^1.1.0",
     "dotenv": "^16.0.3",
     "node-fetch": "^2.6.7",
     "raspberrypi-liquid-crystal": "^1.18.0",
@@ -27,6 +29,7 @@
     "@types/jest": "^29.2.0",
     "@types/node-fetch": "^2.5.12",
     "jest": "^29.2.1",
+    "jest-mock-extended": "^3.0.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
