--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "description": "Air quality monitor using SCD30 CO2 sensor",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest --coverage"
+    "test": "vitest --coverage"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,13 @@
     "async-bmp280": "^1.1.1",
     "async-i2c-bus": "^1.1.0",
     "raspberrypi-liquid-crystal": "^1.18.0",
-    "scd30-node": "^1.0.3"
+    "scd30-node": "^1.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.0",
-    "jest": "^29.2.1",
-    "jest-mock-extended": "^3.0.1",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "@vitest/coverage-v8": "^3.0.7",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.7",
+    "vitest-mock-extended": "^3.0.1"
   },
   "engines": {
     "node": "22",
