--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "jest-mock-extended": "^3.0.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": "^16",
+    "npm": "^8"
   }
 }
